fix nav/hero alignment

--- a/src/assets/less/default/core/backgrounds.less
+++ b/src/assets/less/default/core/backgrounds.less
@@ -8,6 +8,4 @@
   height: 480px;
   background-repeat: no-repeat;
   background-position: left top;
-  display: flex;
-  align-items: center;
 }
