--- a/src/assets/less/default/core/nav.less
+++ b/src/assets/less/default/core/nav.less
@@ -6,6 +6,10 @@
     color: @brand-primary;
     background-color: @white;
   }
+  .navbar-brand {
+    padding-left: 0px;
+    margin-left: 0!important;
+  }
   .bar-2 {
     opacity: 1;
   }
